# notes-mcp

./: .dockerignore  .gitignore  DEEP_LINKS.md  DEPLOYMENT_SUMMARY.md  DOCKER.md  Dockerfile  LICENSE  PROJECT_DOCUMENTATION.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  docker-compose.yml  docker-start.ps1  docker-start.sh  example_summarization.py  mcp_config_example.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docker-build.yml
src/: __init__.py  search.py  server.py  storage.py  vector_store.py  web_server.py
src/templates/: base.html  index.html  note.html  project.html  search.html
tests/: test_deep_links.py  test_search.py  test_server.py  test_storage.py  test_vector_integration.py
