[project]
name = "notes-mcp"
version = "0.1.0"
description = "MCP server for managing versioned notes organized by projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.16.0",
    "python-dateutil>=2.8.2",
    "aiofiles>=23.2.1",
    "rapidfuzz>=3.5.2",
    "flask>=3.0.0",
    "markdown>=3.5.0",
    "uvicorn>=0.27.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
